--- a/configs/VAE.yaml
+++ b/configs/VAE.yaml
@@ -1,12 +1,24 @@
-model_params:
-  output_channels_dim_default : [32,64,128,256,512]
+model_params:     # (channel, repeats)
+  conv_channels : [[32, 2],
+                   [64, 2],
+                   [128, 2],
+                   [256, 2],
+                   [512, 2]]
   latent_dim : 128
 
 data_params:
-  dir : 'data/orig_dataset'
+  data_dir : 'data/dataset'
   img_size : 64
   batch_size : 64
 
 training_params:
   learning_rate : 0.001
-  w_kld : 1.e-5
+  w_kld : 1.e-4
+
+trainer_params:
+  max_epochs: 10000
+  ckpt: ~
+  check_val_every_n_epoch: 3
+
+logging_params:
+  log_dir: "tb_logs"
